# autotools-examples

./: README.org
step-1/: Makefile.am  Makefile.in  configure  configure.ac
step-1/source/: step-1.cc
step-2/: Makefile.am  Makefile.in  configure  configure.ac
step-2/source/: hello.cc
step-3/: Makefile.am  Makefile.in  configure  configure.ac
step-3/config/: ar-lib
step-3/examples/step-3/: step-3.cc  step-3.cc~
step-3/source/helloint/: hello.cc
step-4/: Makefile.am  Makefile.in  configure  configure.ac
step-4/include/helloint/: hello.h
step-4/source/hello/: hello.cc
step-4/source/helloint/: hello.cc
step-5/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
step-5/examples/step-5/: step-5.cc
step-5/include/step-5/base/: config.h.in
step-5/include/step-5/hello/: hello.h
step-5/m4/: ax_prefix_config_h.m4
step-5/source/hello/: hello.cc
step-5/source/helloint/: hello.cc
